--- a/index.html
+++ b/index.html
@@ -1,34 +1,58 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="dest/css/styles.css" />
-  <title>(S)CSS Masterclass</title>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="dest/css/styles.css" />
+    <title>BEST HORROR SCENES</title>
+  </head>
+  <body>
+    <header class="left__title">
+      <span class="main__title">
+        BEST HORROR SCENES
+      </span>
+      <span class="sub__title">
+        An ever growing collection featuring some of the best scenes in horror.
+      </span>
+      <span class="last__title">
+        Best Horror Scenes” is a collection of scenes I feel are some of the
+        most affecting in horror. Some may be simple black cat scares, others
+        may be more subdued or nuanced. Many come from films that aren't
+        necessarily “horror” but have elements or threads of horror, and all
+        have the same general effect: unease, dread, fear, shock, disgust.
+      </span>
+      <div class="linked">
+        <span class="left__title__link">Watch on YouTube</span>
+        <span class="left__title__link">Suggest a Scene</span>
+        <span class="left__title__link">Get Episode Notices</span>
+        <span class="left__title__link">Contact</span>
+        <span class="left__title__link">RSS</span>
+      </div>
+    </header>
+    <main>
+      <div class="main__content">
+        <div class="main__content__title">
+          <div class="title">40. THE BLOOD(1979)</div>
+          <div class="director">Directed by David Cronenberg</div>
+        </div>
+        <img src="image/image40.png" />
+      </div>
 
-<body>
-  <h1>Title</h1>
-  <div class="box">
-    <h2>Another Title</h2>
-    <button>Hello</button>
-  </div>
-  <button>Bye Bye</button>
+      <div class="main__content">
+        <div class="main__content__title">
+          <div class="title">39. 28 DAYS LATER (2002)</div>
+          <div class="director">Directed by Danny Boyle</div>
+        </div>
+        <img src="image/image39.png" />
+      </div>
 
-  <a href="www.google.com">Google</a>
-  <a href="www.google.com">Google</a>
-  <a href="www.google.com">Google</a>
-  <a href="www.google.com">Google</a>
-  <a href="www.google.com">Google</a>
-  <a href="www.google.com">Google</a>
- 
-
-  <a href="#">Log In</a>
-  <button>Log Out</button>
-
-  <h3>HHHellllo</h3>
- 
-</body>
-</body>
-</body>
-</body>
-</body>
+      <div class="main__content">
+        <div class="main__content__title">
+          <div class="title">38. HEREDITARY (2018)</div>
+          <div class="director">Directed by Ari Aster</div>
+        </div>
+        <img src="image/image38.png" />
+      </div>
+    </main>
+  </body>
 </html>
